test/subjects/errors/string_index_reference_assignment.php
<?php

	// The type of Y doesnt matter here
	$x = "x";
	$y = "y";
	$x[0] =& $y;

?>
